Use MiniMessage + cleanup